--- a/dy-sale/package.json
+++ b/dy-sale/package.json
@@ -11,21 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "",
-    "@angular/cdk": "",
-    "@angular/common": "",
-    "@angular/compiler": "",
-    "@angular/core": "",
-    "@angular/fire": "",
-    "@angular/forms": "",
-    "@angular/material": "",
-    "@angular/platform-browser": "",
-    "@angular/platform-browser-dynamic": "",
-    "@angular/router": "",
-    "rxjs": "",
-    "tslib": "",
-    "zone.js": "",
-    "firebase": ""
+    "@angular/animations": "^11.2.5",
+    "@angular/cdk": "^11.2.4",
+    "@angular/common": "^11.2.5",
+    "@angular/compiler": "^11.2.5",
+    "@angular/core": "^11.2.5",
+    "@angular/fire": "^6.1.4",
+    "@angular/forms": "^11.2.5",
+    "@angular/material": "^11.2.4",
+    "@angular/platform-browser": "^11.2.5",
+    "@angular/platform-browser-dynamic": "^11.2.5",
+    "@angular/router": "^11.2.5",
+    "firebase": "^8.3.0",
+    "rxjs": "^6.6.6",
+    "tslib": "^2.1.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/architect": ">= 0.900 < 0.1200",
