--- a/dy-sale/package.json
+++ b/dy-sale/package.json
@@ -24,15 +24,15 @@
     "@angular/router": "^11.2.5",
     "firebase": "^8.3.0",
     "rxjs": "^6.6.6",
-    "tslib": "^2.1.0",
+    "tslib": "^2.0.0",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "@angular-devkit/architect": "0.1102.4",
     "@angular-devkit/build-angular": "^0.1102.4",
-    "@angular/cli": "~10.1.6",
-    "@angular/compiler-cli": "~10.1.5",
-    "@types/jasmine": "~3.5.0",
+    "@angular/cli": "~11.2.4",
+    "@angular/compiler-cli": "~11.2.5",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -42,7 +42,7 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
