--- a/dy-sale/package.json
+++ b/dy-sale/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^11.2.5",
     "@angular/router": "^11.2.5",
     "firebase": "^8.3.0",
+    "moment": "^2.29.1",
     "rxjs": "^6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "^0.11.4"
