--- a/dy-sale/package.json
+++ b/dy-sale/package.json
@@ -16,15 +16,16 @@
     "@angular/cdk": "^11.2.4",
     "@angular/common": "^11.2.5",
     "@angular/compiler": "^11.2.5",
-    "@angular/core": "^11.2.5",
-    "@angular/fire": "^6.1.4",
+    "@angular/core": "^11.2.13",
     "@angular/forms": "^11.2.5",
     "@angular/material": "^11.2.4",
     "@angular/platform-browser": "^11.2.5",
     "@angular/platform-browser-dynamic": "^11.2.5",
     "@angular/router": "^11.2.5",
+    "@ngrx/effects": "^11.1.1",
+    "@ngrx/store": "^11.1.1",
     "moment": "^2.29.1",
-    "rxjs": "^6.6.6",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "^0.11.4"
   },
